; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/gssapi/mech/extr_gss_mo.c_inquire_saslname_for_mech_compat.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/gssapi/mech/extr_gss_mo.c_inquire_saslname_for_mech_compat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gss_mech_compat_desc_struct = type { i32 (i32*, i32, i32, i32, i32)* }
%struct.TYPE_3__ = type { %struct.gss_mech_compat_desc_struct* }

@GSS_S_BAD_MECH = common dso_local global i32 0, align 4
@GSS_S_UNAVAILABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32, i32)* @inquire_saslname_for_mech_compat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inquire_saslname_for_mech_compat(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.gss_mech_compat_desc_struct*, align 8
  %13 = alloca %struct.TYPE_3__*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call %struct.TYPE_3__* @__gss_get_mechanism(i32 %15)
  store %struct.TYPE_3__* %16, %struct.TYPE_3__** %13, align 8
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %18 = icmp eq %struct.TYPE_3__* %17, null
  br i1 %18, label %19, label %21

19:                                               ; preds = %5
  %20 = load i32, i32* @GSS_S_BAD_MECH, align 4
  store i32 %20, i32* %6, align 4
  br label %46

21:                                               ; preds = %5
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load %struct.gss_mech_compat_desc_struct*, %struct.gss_mech_compat_desc_struct** %23, align 8
  store %struct.gss_mech_compat_desc_struct* %24, %struct.gss_mech_compat_desc_struct** %12, align 8
  %25 = load %struct.gss_mech_compat_desc_struct*, %struct.gss_mech_compat_desc_struct** %12, align 8
  %26 = icmp ne %struct.gss_mech_compat_desc_struct* %25, null
  br i1 %26, label %27, label %42

27:                                               ; preds = %21
  %28 = load %struct.gss_mech_compat_desc_struct*, %struct.gss_mech_compat_desc_struct** %12, align 8
  %29 = getelementptr inbounds %struct.gss_mech_compat_desc_struct, %struct.gss_mech_compat_desc_struct* %28, i32 0, i32 0
  %30 = load i32 (i32*, i32, i32, i32, i32)*, i32 (i32*, i32, i32, i32, i32)** %29, align 8
  %31 = icmp ne i32 (i32*, i32, i32, i32, i32)* %30, null
  br i1 %31, label %32, label %42

32:                                               ; preds = %27
  %33 = load %struct.gss_mech_compat_desc_struct*, %struct.gss_mech_compat_desc_struct** %12, align 8
  %34 = getelementptr inbounds %struct.gss_mech_compat_desc_struct, %struct.gss_mech_compat_desc_struct* %33, i32 0, i32 0
  %35 = load i32 (i32*, i32, i32, i32, i32)*, i32 (i32*, i32, i32, i32, i32)** %34, align 8
  %36 = load i32*, i32** %7, align 8
  %37 = load i32, i32* %8, align 4
  %38 = load i32, i32* %9, align 4
  %39 = load i32, i32* %10, align 4
  %40 = load i32, i32* %11, align 4
  %41 = call i32 %35(i32* %36, i32 %37, i32 %38, i32 %39, i32 %40)
  store i32 %41, i32* %14, align 4
  br label %44

42:                                               ; preds = %27, %21
  %43 = load i32, i32* @GSS_S_UNAVAILABLE, align 4
  store i32 %43, i32* %14, align 4
  br label %44

44:                                               ; preds = %42, %32
  %45 = load i32, i32* %14, align 4
  store i32 %45, i32* %6, align 4
  br label %46

46:                                               ; preds = %44, %19
  %47 = load i32, i32* %6, align 4
  ret i32 %47
}

declare dso_local %struct.TYPE_3__* @__gss_get_mechanism(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
